--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -159,7 +159,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ModuleFileTracking]
-MonsterCafe.TimeStamp=2023.03.15-11.15.00
+MonsterCafe.TimeStamp=2023.03.15-11.44.02
 MonsterCafe.LastCompileMethod=External
 StorageServerClient.TimeStamp=2022.10.25-09.57.00
 StorageServerClient.LastCompileMethod=External
@@ -1047,7 +1047,7 @@ MovieSceneCapture.TimeStamp=2022.10.25-09.56.51
 MovieSceneCapture.LastCompileMethod=External
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 BP_Ingredient_Base_C.TransformCommon=True
@@ -1101,9 +1101,9 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=615.000 Y=133.000
-WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+ScreenPosition=X=1064.000 Y=114.000
+WindowSize=X=1280.000 Y=1162.000
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1134,8 +1134,8 @@ Project=C:/Program Files/Epic Games/UE_5.0/
 
 [Python]
 LastDirectory=
-RecentsFiles=H:/EPIC GAMES/Unreal Engine/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=H:/EPIC GAMES/Unreal Engine/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MessageLog]
 LastLogListing=FBXImport
