--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -101,7 +101,6 @@ LastExecutedLaunchName=C-03038
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -1087,7 +1086,7 @@ BlueprintGraph.TimeStamp=2022.10.25-09.56.35
 BlueprintGraph.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 BP_Ingredient_Base_C.TransformCommon=True
@@ -1570,9 +1569,9 @@ ActorComponent=
 CameraActor="\"Object.CameraActor.CameraComponent.Object.PostProcess.PostProcessSettings\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Animations/Jelly/AnimationBP/Jelly_AnimationBP
-MRUItem1=/Game/Animations/Jelly/AnimationBP/Jelly_WalkingBlendspace
-MRUItem2=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem0=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem1=/Game/Animations/Jelly/AnimationBP/Jelly_AnimationBP
+MRUItem2=/Game/Animations/Jelly/AnimationBP/Jelly_WalkingBlendspace
 MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 MRUItem4=/Game/Animations/materials/Jelly/Red_Jelly
 MRUItem5=/Game/Animations/Idle/jelly_idle_Anim
@@ -1647,10 +1646,10 @@ bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
 [DetailCustomWidgetExpansion]
-CameraComponent=CameraComponent.PostProcess.Lens|Mobile Depth of Field,CameraComponent.PostProcess.Lens|Local Exposure,CameraComponent.PostProcess.Lens|Depth of Field,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Rendering Features|Motion Blur,CameraComponent.PostProcess.Rendering Features,
-CameraActor=CameraActor.PostProcess.Rendering Features|Motion Blur,CameraActor.PostProcess.Rendering Features,
-SceneComponent=CameraActor.PostProcess.Rendering Features|Motion Blur,CameraActor.PostProcess.Rendering Features,
-StaticMeshActor=CameraActor.PostProcess.Rendering Features|Motion Blur,CameraActor.PostProcess.Rendering Features,
+CameraComponent=CameraComponent.PostProcess.Lens
+CameraActor=CameraActor.PostProcess.Rendering Features
+SceneComponent=CameraActor.PostProcess.Rendering Features
+StaticMeshActor=CameraActor.PostProcess.Rendering Features,
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 
 [PluginBrowser]
