--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1086,7 +1086,15 @@ BlueprintGraph.TimeStamp=2023.01.07-16.05.21
 BlueprintGraph.LastCompileMethod=External
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Assets/Jelly/bloodjelly/bloodjelly_material.bloodjelly_material
+OpenAssetsAtExit=/Game/Assets/Jelly/bloodjelly/bloodjelly_combine_cream_low1.bloodjelly_combine_cream_low1
+OpenAssetsAtExit=/Game/Assets/Jelly/bloodjelly/bloodjelly_combine_bloodbowl_low.bloodjelly_combine_bloodbowl_low
+OpenAssetsAtExit=/Game/Assets/Jelly/Bonejelly/meatjellydish_material.meatjellydish_material
+OpenAssetsAtExit=/Game/Assets/Jelly/Bonejelly/meatjelly_combine_plate_low.meatjelly_combine_plate_low
+OpenAssetsAtExit=/Game/Assets/Jelly/Bonejelly/meatjelly_material.meatjelly_material
+OpenAssetsAtExit=/Game/Assets/Jelly/melonjelly/melonjelly_low_blinn56_BaseColor_Mat.melonjelly_low_blinn56_BaseColor_Mat
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_Ingredient_Base.BP_Ingredient_Base
 
 [DetailCategories]
 BP_Ingredient_Base_C.TransformCommon=True
@@ -1356,6 +1364,55 @@ SceneComponent.ComponentReplication=True
 SceneComponent.Activation=True
 SceneComponent.Cooking=True
 SceneComponent.Events=True
+BP_Ingredient_Base_C.Tick=True
+BP_Ingredient_Base_C.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.NaniteSettings=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+CustomMeshComponent.Variable=True
+CustomMeshComponent.TransformCommon=True
+CustomMeshComponent.Sockets=True
+CustomMeshComponent.Materials=True
+CustomMeshComponent.HLOD=True
+CustomMeshComponent.ComponentTick=True
+CustomMeshComponent.Lighting=True
+CustomMeshComponent.Navigation=True
+CustomMeshComponent.Rendering=True
+CustomMeshComponent.VirtualTexture=True
+CustomMeshComponent.Tags=True
+CustomMeshComponent.ComponentReplication=True
+CustomMeshComponent.Activation=True
+CustomMeshComponent.Cooking=True
+CustomMeshComponent.Events=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1370,9 +1427,9 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=2850.000 Y=127.000
-WindowSize=X=1928.000 Y=1232.000
-InitiallyMaximized=False
+ScreenPosition=X=-946.000 Y=-1079.000
+WindowSize=X=1912.000 Y=1072.000
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1403,11 +1460,11 @@ Project=C:/Program Files/Epic Games/UE_5.0/
 
 [Python]
 LastDirectory=
-RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=H:/EPIC GAMES/Unreal Engine/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1521,6 +1578,16 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/Jelly/melonjelly/melonjelly_low_blinn56_BaseColor_Mat.melonjelly_low_blinn56_BaseColor_Mat;
+RecentlyPlaced=/Game/Assets/Jelly/melonjelly/melonjelly_combine_melonjelly_low.melonjelly_combine_melonjelly_low;
+RecentlyPlaced=/Game/Assets/Jelly/melonjelly/melonjelly_combine_melonbowl_low.melonjelly_combine_melonbowl_low;
+RecentlyPlaced=/Game/Assets/Jelly/Bonejelly/meatjellydish_material.meatjellydish_material;
+RecentlyPlaced=/Game/Assets/Jelly/Bonejelly/meatjelly_material.meatjelly_material;
+RecentlyPlaced=/Game/Assets/Jelly/Bonejelly/meatjelly_combine_plate_low.meatjelly_combine_plate_low;
+RecentlyPlaced=/Game/Assets/Jelly/Bonejelly/meatjelly_combine_jelly_low1.meatjelly_combine_jelly_low1;
+RecentlyPlaced=/Game/Assets/Jelly/bloodjelly/bloodjelly_combine_cream_low1.bloodjelly_combine_cream_low1;
+RecentlyPlaced=/Game/Assets/Jelly/bloodjelly/bloodjelly_combine_bloodbowl_low.bloodjelly_combine_bloodbowl_low;
+RecentlyPlaced=/Game/Assets/Crate/crate_combine.crate_combine;
 RecentlyPlaced=/Game/Animations/TEST/Idle_-1HP_Anim.Idle_-1HP_Anim;
 
 [/Script/UnrealEd.PersonaOptions]
@@ -1567,18 +1634,30 @@ CameraComponent="\"Object.PostProcess.PostProcessSettings\" "
 SceneComponent=
 ActorComponent=
 CameraActor="\"Object.CameraActor.CameraComponent.Object.PostProcess.PostProcessSettings\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem1=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem2=/Game/Animations/Jelly/AnimationBP/Jelly_AnimationBP
-MRUItem3=/Game/Animations/Jelly/AnimationBP/Jelly_WalkingBlendspace
-MRUItem4=/Game/Animations/materials/Jelly/Red_Jelly
-MRUItem5=/Game/Animations/Idle/jelly_idle_Anim
-MRUItem6=/Game/Animations/Idle/jelly_mesh
-MRUItem7=/Game/Animations/materials/Eyes/Eye_material
-MRUItem8=/Game/ThirdPerson/Blueprints/Jelly_PlayerBP
-MRUItem9=/Game/Characters/Mannequin_UE4/Animations/Jog_Fwd
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_Ingredient_Base
+MRUItem1=/Game/Assets/Jelly/melonjelly/melonjelly_low_blinn56_BaseColor_Mat
+MRUItem2=/Game/Assets/Jelly/Bonejelly/meatjelly_material
+MRUItem3=/Game/Assets/Jelly/Bonejelly/meatjelly_combine_plate_low
+MRUItem4=/Game/Assets/Jelly/bloodjelly/bloodjelly_combine_bloodbowl_low
+MRUItem5=/Game/Assets/Jelly/bloodjelly/bloodjelly_material
+MRUItem6=/Game/Assets/Jelly/bloodjelly/bloodjelly_combine_cream_low1
+MRUItem7=/Game/Assets/Crate/crate_combine
+MRUItem8=/Game/Assets/Crate/crate_material
+MRUItem9=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem10=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem11=/Game/Animations/Jelly/AnimationBP/Jelly_AnimationBP
+MRUItem12=/Game/Animations/Jelly/AnimationBP/Jelly_WalkingBlendspace
+MRUItem13=/Game/Animations/materials/Jelly/Red_Jelly
+MRUItem14=/Game/Animations/Idle/jelly_idle_Anim
+MRUItem15=/Game/Animations/Idle/jelly_mesh
+MRUItem16=/Game/Animations/materials/Eyes/Eye_material
+MRUItem17=/Game/ThirdPerson/Blueprints/Jelly_PlayerBP
+MRUItem18=/Game/Characters/Mannequin_UE4/Animations/Jog_Fwd
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Mannequin_UE4/Animations/Jog_Fwd.Jog_Fwd=1
@@ -1589,6 +1668,8 @@ MRUItem9=/Game/Characters/Mannequin_UE4/Animations/Jog_Fwd
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
 /Game/Animations/Jelly/AnimationBP/Jelly_WalkingBlendspace.Jelly_WalkingBlendspace=1
 /Game/Animations/Jelly/AnimationBP/Jelly_AnimationBP.Jelly_AnimationBP=1
+/Game/ThirdPerson/Blueprints/BP_Ingredient_Base.BP_Ingredient_Base=1
+/Game/Assets/Crate/crate_material.crate_material=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -1644,13 +1725,17 @@ GraphEditorQuickJumps=()
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 CameraComponent=CameraComponent.PostProcess.Lens
 CameraActor=CameraActor.PostProcess.Rendering Features
-SceneComponent=CameraActor.PostProcess.Rendering Features
+SceneComponent=
 StaticMeshActor=CameraActor.PostProcess.Rendering Features,
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
+BP_Ingredient_Base_C=CameraActor.PostProcess.Rendering Features,
+BP_Table_C=CameraActor.PostProcess.Rendering Features,
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
