--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -128,7 +128,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 SnapScaleEnabled=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Assets/Jelly/bloodjelly
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=True
@@ -1084,9 +1084,11 @@ SequencerWidgets.TimeStamp=2022.10.25-09.56.58
 SequencerWidgets.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2023.01.07-16.05.21
 BlueprintGraph.LastCompileMethod=External
+HierarchicalLODUtilities.TimeStamp=2022.10.25-09.56.47
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Assets/Jelly/bloodjelly/bloodjelly_material.bloodjelly_material
 OpenAssetsAtExit=/Game/Assets/Jelly/bloodjelly/bloodjelly_combine_cream_low1.bloodjelly_combine_cream_low1
 OpenAssetsAtExit=/Game/Assets/Jelly/bloodjelly/bloodjelly_combine_bloodbowl_low.bloodjelly_combine_bloodbowl_low
@@ -1427,7 +1429,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=-946.000 Y=-1079.000
+ScreenPosition=X=0.000 Y=2.000
 WindowSize=X=1912.000 Y=1072.000
 InitiallyMaximized=True
 
@@ -1449,7 +1451,7 @@ UNR=F:/Uni/Year2/Submission_2/MonsterCafe/Content/
 BRUSH=F:/Uni/Year2/Submission_2/MonsterCafe/Content/
 FBX=F:/Uni/Year2/Submission_2/MonsterCafe/Content/
 FBXAnim=F:/Uni/Year2/Submission_2/MonsterCafe/Content/
-GenericImport=../../../../../../!SCHOOL/NUA/YEAR 2/BA2b/Uncanny Jelly/maya/idle_bored.fbx
+GenericImport=C:/Users/Leo/Downloads/Assets/Assets/crate_base/crate_combine.fbx
 GenericExport=F:/Uni/Year2/Submission_2/MonsterCafe/Content/
 GenericOpen=F:/Uni/Year2/Submission_2/MonsterCafe/Content/
 GenericSave=F:/Uni/Year2/Submission_2/MonsterCafe/Content/
@@ -1670,6 +1672,13 @@ MRUItem18=/Game/Characters/Mannequin_UE4/Animations/Jog_Fwd
 /Game/Animations/Jelly/AnimationBP/Jelly_AnimationBP.Jelly_AnimationBP=1
 /Game/ThirdPerson/Blueprints/BP_Ingredient_Base.BP_Ingredient_Base=1
 /Game/Assets/Crate/crate_material.crate_material=1
+/Game/Assets/Jelly/bloodjelly/bloodjelly_material.bloodjelly_material=1
+/Game/Assets/Jelly/bloodjelly/bloodjelly_combine_cream_low1.bloodjelly_combine_cream_low1=1
+/Game/Assets/Jelly/bloodjelly/bloodjelly_combine_bloodbowl_low.bloodjelly_combine_bloodbowl_low=1
+/Game/Assets/Jelly/Bonejelly/meatjellydish_material.meatjellydish_material=1
+/Game/Assets/Jelly/Bonejelly/meatjelly_combine_plate_low.meatjelly_combine_plate_low=1
+/Game/Assets/Jelly/Bonejelly/meatjelly_material.meatjelly_material=1
+/Game/Assets/Jelly/melonjelly/melonjelly_low_blinn56_BaseColor_Mat.melonjelly_low_blinn56_BaseColor_Mat=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -1725,7 +1734,6 @@ GraphEditorQuickJumps=()
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 CameraComponent=CameraComponent.PostProcess.Lens
