--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1700,6 +1700,11 @@ BP_Ingredient_Base_Vomit_jelly_C.HLOD=True
 BP_Ingredient_Base_Vomit_jelly_C.WorldPartition=True
 BP_Ingredient_Base_Vomit_jelly_C.Events=True
 BP_Ingredient_Base_Vomit_jelly_C.TransformCommon=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
