--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -128,10 +128,11 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 GridEnabled=False
 CurrentPosGridSize=3
+SnapScaleEnabled=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
-ContentBrowserTab1.SelectedPaths=/Game/Assets/Environment/Bridge
+ContentBrowserTab1.SelectedPaths=/Game/Assets/Environment/Red_Maple/mapletree
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
@@ -1130,34 +1131,33 @@ SkeletonEditor.TimeStamp=2022.10.25-09.56.58
 SkeletonEditor.LastCompileMethod=Unknown
 PinnedCommandList.TimeStamp=2022.10.25-09.56.54
 PinnedCommandList.LastCompileMethod=Unknown
-TextureEditor.TimeStamp=2022.07.26-14.25.10
-TextureEditor.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2022.10.25-09.57.00
+TextureEditor.LastCompileMethod=External
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Kitchen/Floor_tile/stone_floor_tile2
-MRUItem1=/Game/Assets/Kitchen/Floor_tile/floortile_2
-MRUItem2=/Game/Assets/Kitchen/Floor_tile/floortile_1
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem4=/Game/Animations/Jelly/AnimationBP/-3HPAnimationBP
-MRUItem5=/Game/Animations/Jelly/AnimationBP/Jelly_AnimationBP
-MRUItem6=/Game/ThirdPerson/Blueprints/Ingredient_children/BP_Ingredient_Base_mochi
-MRUItem7=/Game/ThirdPerson/Blueprints/Ingredient_children/BP_Ingredient_Base_jellymix
-MRUItem8=/Game/ThirdPerson/Blueprints/Ingredient_children/BP_Ingredient_Base_Blood
-MRUItem9=/Game/ThirdPerson/Blueprints/Ingredient_children/BP_Ingredient_Base_melon
-MRUItem10=/Game/ThirdPerson/Blueprints/Ingredient_children/BP_Ingredient_Base_Bone
-MRUItem11=/Game/ThirdPerson/Blueprints/Ingredient_children/BP_Ingredient_Base_vomit
-MRUItem12=/Game/ThirdPerson/Blueprints/Ingredient_children/BP_Ingredient_Base_water
-MRUItem13=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Ingredient_Base_Blood_jelly
-MRUItem14=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Ingredient_Base_Meat_jelly
-MRUItem15=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Ingredient_Base_Melon_jelly
-MRUItem16=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Ingredient_Base_Mochi_jelly
-MRUItem17=/Game/ThirdPerson/Blueprints/BP_Ingredient_Child_JellyMix
-MRUItem18=/Game/ThirdPerson/Blueprints/BP_MixingMachineBowl
-MRUItem19=/Game/ThirdPerson/Blueprints/BP_Ingredient_Child_Water
+MRUItem0=/Game/Assets/Environment/Red_Maple/mapletree/mapleredleafs_Mat
+MRUItem1=/Game/Assets/Environment/Red_Maple/mapletree/Maple_Trunk
+MRUItem2=/Game/Assets/Environment/Red_Maple/mapletree/trunk_blinn74_BaseColor
+MRUItem3=/Game/Assets/Kitchen/Counters/DefaultMaterial_BaseColor
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_Table
+MRUItem5=/Game/Assets/Kitchen/Counters/table_material
+MRUItem6=/Game/Assets/Kitchen/Floor_tile/stone_floor_tile2
+MRUItem7=/Game/Assets/Kitchen/Floor_tile/floortile_2
+MRUItem8=/Game/Assets/Kitchen/Floor_tile/floortile_1
+MRUItem9=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem10=/Game/Animations/Jelly/AnimationBP/-3HPAnimationBP
+MRUItem11=/Game/Animations/Jelly/AnimationBP/Jelly_AnimationBP
+MRUItem12=/Game/ThirdPerson/Blueprints/Ingredient_children/BP_Ingredient_Base_mochi
+MRUItem13=/Game/ThirdPerson/Blueprints/Ingredient_children/BP_Ingredient_Base_jellymix
+MRUItem14=/Game/ThirdPerson/Blueprints/Ingredient_children/BP_Ingredient_Base_Blood
+MRUItem15=/Game/ThirdPerson/Blueprints/Ingredient_children/BP_Ingredient_Base_melon
+MRUItem16=/Game/ThirdPerson/Blueprints/Ingredient_children/BP_Ingredient_Base_Bone
+MRUItem17=/Game/ThirdPerson/Blueprints/Ingredient_children/BP_Ingredient_Base_vomit
+MRUItem18=/Game/ThirdPerson/Blueprints/Ingredient_children/BP_Ingredient_Base_water
+MRUItem19=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Ingredient_Base_Blood_jelly
 
 [DetailCategories]
 BP_MixingMachine_C.Tick=True
@@ -1641,8 +1641,26 @@ SkeletalMeshActor.Replication=True
 SkeletalMeshActor.WorldPartition=True
 SkeletalMeshActor.Input=True
 SkeletalMeshActor.Actor=True
+MaterialExpressionTextureSampleParameter2D.General=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpression=True
+MaterialExpressionTextureSampleParameter2D.ParameterCustomization=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
+MaterialExpressionVertexNormalWS.MaterialExpression=True
+MaterialExpressionTwoSidedSign.MaterialExpression=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/Environment/Red_Maple/mapletree/mapleredleafs_Mat.mapleredleafs_Mat;
+RecentlyPlaced=/Game/Assets/Environment/Red_Maple/mapletree/Maple_Trunk.Maple_Trunk;
+RecentlyPlaced=/Game/Assets/Environment/Red_Maple/mapletree/trunk_blinn74_OcclusionRoughnessMetallic.trunk_blinn74_OcclusionRoughnessMetallic;
+RecentlyPlaced=/Game/Assets/Environment/Red_Maple/mapletree/trunk_blinn74_Normal.trunk_blinn74_Normal;
+RecentlyPlaced=/Game/Assets/Environment/Red_Maple/mapletree/trunk_blinn74_BaseColor.trunk_blinn74_BaseColor;
+RecentlyPlaced=/Game/Assets/Environment/Red_Maple/mapletree/mapletree_Tree_0.mapletree_Tree_0;
+RecentlyPlaced=/Game/Assets/Environment/Red_Maple/mapletree/mapletree_Tree.mapletree_Tree;
+RecentlyPlaced=/Game/Assets/Environment/Red_Maple/mapleredleafs.mapleredleafs;
+RecentlyPlaced=/Game/Assets/Environment/Red_Maple/bush/bush.bush;
 RecentlyPlaced=/Game/Animations/Jelly/normal_Stage/Idle/jelly_idle_Anim.jelly_idle_Anim;
 RecentlyPlaced=/Game/Assets/Kitchen/Pannel/pannel.pannel;
 RecentlyPlaced=/Game/Assets/Kitchen/Floor_tile/floortile_2.floortile_2;
@@ -1654,15 +1672,6 @@ RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_Jelly_Base.BP_Jelly_Base;
 RecentlyPlaced=/Script/MonsterCafe.BP_Jelly_Base;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_Ingredient_Base.BP_Ingredient_Base;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_MixingMachineBowl.BP_MixingMachineBowl;
-RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_MixingMachine.BP_MixingMachine;
-RecentlyPlaced=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Ingredient_Base_Vomit_jelly.BP_Ingredient_Base_Vomit_jelly;
-RecentlyPlaced=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Ingredient_Base_Mochi_jelly.BP_Ingredient_Base_Mochi_jelly;
-RecentlyPlaced=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Ingredient_Base_Melon_jelly.BP_Ingredient_Base_Melon_jelly;
-RecentlyPlaced=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Ingredient_Base_Meat_jelly.BP_Ingredient_Base_Meat_jelly;
-RecentlyPlaced=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Ingredient_Base_Blood_jelly.BP_Ingredient_Base_Blood_jelly;
-RecentlyPlaced=/Game/ThirdPerson/Blueprints/Ingredient_children/BP_Ingredient_Base_mochi.BP_Ingredient_Base_mochi;
-RecentlyPlaced=/Game/ThirdPerson/Blueprints/Ingredient_children/BP_Ingredient_Base_vomit.BP_Ingredient_Base_vomit;
-RecentlyPlaced=/Game/ThirdPerson/Blueprints/Ingredient_children/BP_Ingredient_Base_water.BP_Ingredient_Base_water;
 
 [MessageLog]
 LastLogListing=PIE
@@ -2198,7 +2207,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=2.000
-ScreenPosition=X=214.000 Y=120.000
+ScreenPosition=X=-910.000 Y=-947.000
 WindowSize=X=1912.000 Y=1072.000
 WindowSize=X=2036.000 Y=1163.000
 InitiallyMaximized=True
@@ -2250,7 +2259,7 @@ FBX=../../../../../../Users/keldy/Documents/GitHub/MonsterCafe/Content/
 FBXAnim=F:/Uni/Year2/Submission_2/MonsterCafe/Content/
 FBXAnim=../../../../../../Users/keldy/Documents/GitHub/MonsterCafe/Content/
 GenericImport=../../../../../../!SCHOOL/NUA/YEAR 2/BA2b/Uncanny Jelly/maya/environment/bamboo_planter.fbx
-GenericImport=../../../../../../Users/2002274/Downloads/pannel.fbx
+GenericImport=C:/Users/Leo/Downloads/counter_levelone (1)/counter/DefaultMaterial_BaseColor_NRM.png
 GenericExport=../../../../../../!SCHOOL/NUA/YEAR 2/BA2b/Uncanny Jelly/maya/map.FBX
 GenericExport=../../../../../../Users/keldy/Documents/GitHub/MonsterCafe/Content/
 GenericOpen=F:/Uni/Year2/Submission_2/MonsterCafe/Content/
@@ -2269,9 +2278,9 @@ Project=C:/Program Files/Epic Games/UE_5.0/
 [Python]
 LastDirectory=
 LastDirectory=
-RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=H:/EPIC GAMES/Unreal Engine/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 None=======
 
 [FBX_Import_UI_Option_FbxImportUI]
@@ -2420,7 +2429,7 @@ TimelineEnabledSnaps=MontageSection
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
-Object=
+Object="\"Object.Lightmass.LightmassSettings\" "
 AnimGraphNode_RandomPlayer="\"Object.Settings.Node.Entries\" "
 AnimGraphNode_Base=
 K2Node=
@@ -2429,9 +2438,9 @@ CameraComponent="\"Object.PostProcess.PostProcessSettings\" "
 SceneComponent=
 ActorComponent=
 CameraActor="\"Object.CameraActor.CameraComponent.Object.PostProcess.PostProcessSettings\" "
-StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent=
+StaticMeshComponent="\"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" "
 SkeletalMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 EdGraphNode_Comment=
@@ -2520,6 +2529,8 @@ None=======
 /Game/Assets/Kitchen/Floor_tile/floortile_1.floortile_1=1
 /Game/Assets/Kitchen/Floor_tile/floortile_2.floortile_2=1
 /Game/Assets/Kitchen/Floor_tile/stone_floor_tile2.stone_floor_tile2=1
+/Game/Assets/Environment/Red_Maple/mapletree/mapleredleafs_Mat.mapleredleafs_Mat=1
+/Game/Assets/Environment/Red_Maple/mapletree/Maple_Trunk.Maple_Trunk=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -2575,7 +2586,7 @@ GraphEditorQuickJumps=()
 [DetailCustomWidgetExpansion]
 CameraComponent=CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Color Grading,
 CameraActor=CameraActor.PostProcess.Rendering Features,
-SceneComponent=
+SceneComponent=CameraActor.PostProcess.Rendering Features,
 StaticMeshActor=CameraActor.PostProcess.Rendering Features,
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 BP_Ingredient_Base_C=CameraActor.PostProcess.Rendering Features,
